--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -19,8 +19,8 @@ spec:
       # image: gcr.io/kaniko-project/executor:v1.6.0-debug
       image: gcr.io/kaniko-project/executor:v1.19.2
       imagePullPolicy: Always
-      command: ["sleep"]
-      args: ["999999"]
+      command: ["cat"]
+      tty: true
       volumeMounts:
         - name: jenkins-docker-cfg
           mountPath: /kaniko/.docker
