--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   containers:
     - name: maven
-      image: maven:alpine
+      #image: maven:alpine
+      image: maven:3.8.6-openjdk-11
       command: ["cat"]
       tty: true
       volumeMounts:
