--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -15,7 +15,12 @@ spec:
           mountPath: /root/.m2/
         - name: workspace
           mountPath: /home/jenkins/agent
-    
+    - name: slscan
+      image: shiftleft/sast-scan
+      imagePullPolicy: Always
+      command:
+        - cat
+      tty: true
     - name: kaniko
       # image: gcr.io/kaniko-project/executor:v1.6.0-debug
       image: gcr.io/kaniko-project/executor:v1.19.2-debug
