--- a/build-agent.yaml
+++ b/build-agent.yaml
@@ -54,6 +54,8 @@ spec:
       volumeMounts:
         - name: workspace
           mountPath: /home/jenkins/agent
+        - name: docker-sock
+          mountPath: /var/run/docker.sock
     
     - name: trufflehog
       image: rmkanda/trufflehog
